# mlops_mle

./: .gitignore  .python-version  Dockerfile  README.md  alembic.ini  classifier.joblib  data_generator.py  docker-compose.yml  pyproject.toml  scaler.joblib
alembic/: env.py
alembic/versions/: 56edcc7d1bca_.py
app/: config.py  data_generator.py  pipline.py  tables.py  test.py
scripts/: start_generator.sh
