[tool.poetry]
name = "mlops-mle"
version = "0.1.0"
description = ""
authors = ["kairo"]
readme = "README.md"
packages = [{include = "mlops_mle"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.3"
psycopg2-binary = "^2.9.5"
scikit-learn = "^1.2.2"
sqlalchemy = "^2.0.6"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
ruff = "^0.0.257"
isort = "^5.12.0"
mypy = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
fix = true
exclude = ['*.pyi']

[tool.ruff.per-file-ignores]
"__init__.py" = ["E402", "F401"]

[tool.black]
line-length = 100
preview = true

[tool.mypy]
python_version = "3.10" 
ignore_missing_imports = true 
disallow_any_generics = true 
disallow_untyped_calls= true 
disallow_untyped_defs= true 
disallow_incomplete_defs = true 
disallow_untyped_decorators = true 
check_untyped_defs = true 
strict_optional = false 
warn_redundant_casts = true 
warn_unused_ignores = true 
allow_redefinition = true 
show_column_numbers = true 
pretty = true